<resources>
    <string name="app_name">AfarySeller</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_service">My Service</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>
    <string name="ok">OK</string>
    <string name="notification_channel_id" translatable="false" />
    <string name="login_now">Login Now</string>
    <string name="register">Register</string>
    <string name="login"> Login</string>
    <string name="already">Already have an account ? </string>
    <string name="add_skil">Add Skills</string>
    <string name="add_next">Next</string>
    <string name="_135_136_sneh_nagar_near_agrasen_marg">135-136 sneh nagar, near agrasen marg</string>
    <string name="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh quis aliquam enim, ut enim convallis. </string>
    <string name="update">Update</string>
    <string name="channelId">mychannel</string>
    <string name="select_skill">Select the Skills</string>
    <string name="select_shops">Shops</string>
    <string name="servre">Your membership request has been sent
 to the AfaryCode administration. Please wait,  you will receive a notification in a few moments.</string>
    <string name="register1"><u>REGISTER</u></string>
    <string name="servre2">WELL DONE!!! Your membership request has been validated. CLICK ON OK And start an exciting Adventure.</string>
    <string name="home_"> Click this icon to add your Skills or click on my services.</string>
    <string name="home_1"> By clicking on the add icon, please add on your preferred skills.</string>
    <string name="add_shops"> By clicking on the add icon, please add on your shops.</string>
    <string name="Skip"><u>Skip</u></string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="others">OTHERS</string>
    <string name="update_profile">Update Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="my_shopping_online_order">My shopping online order</string>
    <string name="my_pharmacy_orders">My pharmacy orders</string>
    <string name="my_requests">My requests</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="commitment1">1.  Prioritize AfaryCode Orders.</string>
    <string name="commitment2">2.  Give Real Information</string>
    <string name="commitment3">3.  To be reliable and punctual, to respect the commitments.</string>
    <string name="commitment4">4.  Respect the conditions.</string>
    <string name="commitment5">5.  Be serious and have the rigors.</string>
    <string name="usd">USD</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="upload_text">Upload Your Picture with ID Card like below</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="demo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient</string>
    <string name="book_your_nearby_provider">Book Your Nearby Provider</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="password">Password</string>
    <string name="email_address_mobile_number">Mobile number</string>
    <string name="email_address_mobile_number1">Email/Mobile number</string>
    <string name="verify">Verify</string>
    <string name="title_get_start">To get started as a provider,
        we invite you to validate this character of good behviour.</string>
    <string name="user_name">Username</string>
    <string name="e_mail">E - mail</string>
    <string name="city">City</string>
    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Please check your network</string>
    <string name="register_now">Register Now</string>
    <string name="one_app_that_takes_care_in_every_thing">One app that takes care in every thing</string>
    <string name="do_you_have_a_customer_account">Do yu have a customer account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_country">Select Country</string>
    <string-array name="array_name">
        <item>Select Country</item>

    </string-array>
    <string name="place_api_key">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="address">Address</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_select_address">Please enter address</string>
    <string name="enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_does_not_matched">Password doesn\'t matched</string>
    <string name="please_enter_country">Please enter country</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="wrong_email">Wrong email</string>
    <string name="select_image_from">Select image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">gallery</string>
    <string name="required">required</string>
    <string name="login_successfully">Login successfully</string>
    <string name="my_service">My Services</string>
    <string name="skills_not_available">skills not available</string>
    <string name="zipcode">Zipcode</string>
    <string name="periodic_report">Periodic Reports</string>
    <string name="proposal_list_page">Proposal list page</string>
    <string name="save_password">Save Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="rechareg_balance">Recharge and Balance</string>
    <string name="contact_support">Contact Support</string>
    <string name="can_not_empty">Field cannot be empty</string>
    <string name="mobile_account_two">Mobile network account number2</string>
    <string name="mobile_account_one">Mobile network account number1</string>
    <string name="please_upload_profile_img">"Please upload shop image1 "</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_country">Please select country</string>
    <string name="please_add_mobile_network_account_number1">Please add mobile network account number</string>
    <string name="please_add_mobile_network_account_number2">Please add mobile network account number2</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="add_shop_logo_here">Add Shop Logo here</string>
    <string name="add_shop_logo">Add Shop Logo/ Photo</string>
    <string name="add_1st_shop_photo_here">Add 1st Shop Photo here</string>
    <string name="add_2st_shop_photo_here">Add 2nd Shop Photo here</string>
    <string name="please_upload_profile_img2">Please upload shop image2</string>
    <string name="please_upload_shp_logo">Please upload shop logo</string>
    <string name="my_shops_list">My Shops List</string>
    <string name="product_name">Product Name</string>
    <string name="selling_price">Selling Price</string>
    <string name="description">Description</string>
   <string name="sku">SKU (reference number of your product)</string>
    <string name="create_product">create product</string>
    <string name="update_images">update images</string>
    <string name="item_categories">Item Categories</string>
    <string name="add_categories">add categories</string>
    <string name="brand">Brand</string>
    <string name="set_brand">set brand</string>
    <string name="manage_attributes_and_options">Manage attributes and options</string>
    <string name="add_attributes">add attributes</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="add_a_new_prodcut">Add a new product</string>
    <string name="main_categories">Main Categories</string>
    <string name="select_category_for_this_product">Select Categories for this product</string>
    <string name="create_new_brand">Create a New Brand</string>
    <string name="write_a_new_brand_name">write a new brand name</string>
    <string name="select_or_search_your_product_brand_name">Select or search your product brand name</string>
    <string name="search_brand">Search Brands</string>
    <string name="please_enter_brand_name">Please enter brand name</string>
    <string name="select_sub_category_for_this_product">Select Sub Categories for this product</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="add">Add</string>
    <string name="item_sub_categories">Item Sub categories</string>
    <string name="create_product_brand">create product brand</string>
    <string name="please_select_brand">Please select brand</string>
    <string name="create_new_attribute">Create new attribute</string>
    <string name="write_new_attribute">Write new attribute</string>
    <string name="select_or_search_your_product_attribute">Select or Search your product attribute</string>
    <string name="add_attribute">Add Attributes</string>
    <string name="add_or_remove_options">Add or Remove Options</string>
    <string name="add_new_options">Add new options</string>
    <string name="options">options</string>
    <string name="done">done</string>
    <string name="please_enter_attribute">Please enter attribute</string>
    <string name="create_variation">create variation</string>
    <string name="please_enter_option">Please enter option</string>
    <string name="please_select_variations">Please select variations</string>
    <string name="please_select_attribute">Please select attribute</string>
    <string name="add_product_image">Add product image</string>
    <string name="product_image1">Add 1st Product photo here </string>
    <string name="product_image2">Add 2nd Product photo here </string>
    <string name="product_image3">Add 3rd Product photo here </string>
    <string name="product_image4">Add 4th Product photo here </string>
    <string name="please_add_sub_category">Please add sub category</string>
    <string name="please_add_brand">Please add brand</string>
    <string name="please_add_attribute">Please add attribute</string>
    <string name="please_add_1st_product_image">Please add 1st product image</string>
    <string name="please_add_2nd_product_image">Please add 2nd product image</string>
    <string name="please_add_3rd_product_image">Please add 3rd product image</string>
    <string name="orders_list">Orders List</string>
    <string name="search_shop">Search Shop</string>
    <string name="cancel">Cancel</string>
    <string name="order_cancel_reason">Order cancel reason</string>
    <string name="reason">reason</string>
    <string name="submit">Submit</string>
    <string name="for_what_reason_are_you_cancelling_order">For what reason are you cancelling the order?</string>
    <string name="i_am_out_of_stock">I am out of stock</string>
    <string name="for_another_reason">for another reason</string>
    <string name="advance_criteria">Advance \ncriteria</string>
    <string name="by_store">By Store</string>
    <string name="by_sub_seller">"By Sub-seller"</string>
    <string name="country_by_store">Country by store</string>
</resources>