<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_15sdp">






                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/advance_criteria"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_bold"/>



                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp">

                    <RadioButton
                        android:id="@+id/rdStore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/by_store"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppinsregular"/>

                    <RadioButton
                        android:id="@+id/rdSubSeller"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/by_sub_seller"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppinsregular"/>

                    <RadioButton
                        android:id="@+id/rdStoreCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/country_by_store"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppinsregular"/>


                </RadioGroup>







            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>