<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.afaryseller.ui.home.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">


        <action
            android:id="@+id/action_home_fragment_to_orderList"
            app:destination="@id/navigation_orderList" />


        <action
            android:id="@+id/action_home_fragment_to_search"
            app:destination="@id/navigation_search" />


    </fragment>

     <fragment
        android:id="@+id/navigation_service"
        android:name="com.afaryseller.ui.home.fragment.MyServiceFragment"
        android:label="@string/title_service"
        tools:layout="@layout/fragment_service">

         <action
             android:id="@+id/action_myservice_fragment_to_shoplist"
             app:destination="@id/navigation_shoplist" />

       <!--  <action
             android:id="@+id/action_addShop_fragment_to_addTime"
             app:destination="@id/navigation_addTime" />-->

     </fragment>

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.afaryseller.ui.wallet.WalletFragment"
        tools:layout="@layout/fragment_wallet" />








    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.afaryseller.ui.home.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">



    </fragment>









    <fragment
        android:id="@+id/navigation_addShop"
        android:name="com.afaryseller.ui.addshop.AddShopFragment"
        tools:layout="@layout/fragment_add_shop">

        <action
            android:id="@+id/action_addShop_fragment_to_addTime"
            app:destination="@id/navigation_addTime" />

    </fragment>



    <fragment
        android:id="@+id/navigation_addTime"
        android:name="com.afaryseller.ui.addtime.AddTimeFragment"
        tools:layout="@layout/fragment_add_time">

        <action
            android:id="@+id/action_addTime_fragment_to_shoplist"
            app:destination="@id/navigation_shoplist" />

    </fragment>




    <fragment
        android:id="@+id/navigation_shoplist"
        android:name="com.afaryseller.ui.shoplist.ShopListFragment"
        tools:layout="@layout/fragment_shop_list">

        <action
            android:id="@+id/action_shoplist_fragment_to_addshop"
            app:destination="@id/navigation_addShop" />

        <action
            android:id="@+id/action_shoplist_fragment_to_editShop"
            app:destination="@id/navigation_editShop" />

    </fragment>


    <fragment
        android:id="@+id/navigation_editShop"
        android:name="com.afaryseller.ui.editshop.EditShopFragment"
        tools:layout="@layout/fragment_edit_shop">

       <action
            android:id="@+id/action_editShop_fragment_to_shoplist"
            app:destination="@id/navigation_shoplist" />

    </fragment>




   <!-- <fragment
        android:id="@+id/navigation_editTime"
        tools:layout="@layout/fragment_edit_time"
        android:name="androidx.navigation.fragment.NavHostFragment"
        >



    </fragment>-->

  <!--  <activity android:id="@+id/navigation_shopDetails"
        android:name="com.afaryseller.ui.shopdetails.ShopDetailsFragment"
        tools:layout="@layout/fragment_shop_details">

        <action
            android:id="@+id/action_shop_details_fragment_to_editTime"
            app:destination="@id/navigation_editTime" />

    </activity>-->


    <fragment
        android:id="@+id/navigation_orderList"
        android:name="com.afaryseller.ui.bookedorder.OrderFragment"
        android:label="@string/orders_list"
        tools:layout="@layout/order_fragment"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.afaryseller.ui.search.SearchAct"
        android:label="@string/search_shop"
        tools:layout="@layout/activity_search"/>



</navigation>